# Hackles

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_REVIEW.md  CONTRIBUTING.md  MANIFEST.in  QUERY_GAP_ANALYSIS.md  README.md  SECURITY.md  debug_owned.cypher  pyproject.toml  requirements-dev.txt  requirements.txt  test_all_features.sh  test_query.cypher
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
hackles/: __init__.py  __main__.py
hackles/abuse/: __init__.py  loader.py  printer.py
hackles/abuse/templates/: accountoperators.yml  acl.yaml  adcs.yaml  adcsesc1.yml  adcsesc10.yml  adcsesc11.yml  adcsesc13.yml  adcsesc15.yml  adcsesc2.yml  adcsesc3.yml  adcsesc4.yml  adcsesc5.yml  adcsesc6.yml  adcsesc7.yml  adcsesc8.yml  adcsesc9.yml  addallowedtoact.yml  addkeycredentiallink.yml  addmember.yml  addself.yml  allextendedrights.yml  asreproasting.yml  azureadconnect.yml  backupoperators.yml  blankpassword.yml  canpsremote.yml  canrdp.yml  coercion.yml  constraineddelegation.yml  credentialtheft.yml  dcsync.yml  dnsadmins.yml  exchangeprivesc.yml  executedcom.yml  forcechangepassword.yml  genericall.yml  genericwrite.yml  goldencert.yml  gpoabuse.yml  hassidhistory.yml  (+21 more)
hackles/api/: client.py  config.py  ingest.py
hackles/cli/: __init__.py  completion.py  formatter.py  main.py  parser.py
hackles/core/: __init__.py  bloodhound.py  config.py  constants.py  cypher.py  scoring.py  utils.py
hackles/display/: __init__.py  banner.py  colors.py  paths.py  report.py  summary.py  tables.py
hackles/queries/: __init__.py  base.py
hackles/queries/acl/: __init__.py  acl_abuse.py  add_allowed_to_act.py  add_member.py  all_extended_rights.py  container_acl_abuse.py  domain_users_dangerous_acls.py  force_change_password.py  generic_all.py  generic_write.py  gpo_control_privileged.py  gpo_interesting_names.py  (+11 more)
scripts/: check.sh
tests/: __init__.py  conftest.py  test_abuse_loader.py  test_bloodhound.py  test_cli.py  test_config.py  test_queries.py  test_utils.py
(+142 files in other folders)
